<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>week3_deliverables</name>
  <version>0.0.0</version>
  <description>SAS Lab ROS2 Bootcamp Week 3 vacuum and random goal scripts</description>
  <maintainer email="tmatthew@ucsd.edu">Trevor</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-random</exec_depend>
  
  <build_depend>rclpy</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>turtlebot3</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
